--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -127,19 +127,69 @@ $col3-width: auto;
       background: #eef9e9;
     }
   }
-  &-text-info {
-    align-items: center;
+  &-info {
     display: flex;
     font-size: 18px;
     font-weight: 700;
-    height: 100%;
-    justify-content: center;
-    width: 100%;
+    box-shadow: 0 0 1px 0 #c2c2c2;
+    height: 300px;
+    overflow-y: auto;
+    background-color: white;
+    border-radius: 0 0 $table-border-radius $table-border-radius;
+    &_text {
+      margin: auto;
+    }
   }
 
   &-actions {
     display: flex;
     align-items: center;
+  }
+
+  &-search {
+    &_input {
+      width: 100%;
+      position: relative;
+      input {
+        width: 100%;
+        height: 100%;
+        outline: none;
+        line-height: 0;
+        font-size: 16px;
+        background: #FFF;
+        padding: 12px 52px 11px 19px;
+        box-sizing: border-box;
+        border-radius: 27px;
+        border: 1px solid #adc0d3;
+        box-shadow: 0px 1px 4px 0px #B9CFE8;
+      }
+    }
+    &_button {
+      position: absolute;
+      right: 0px;
+      top: 0px;
+      padding: 0;
+      border: none;
+      background: transparent;
+      cursor: pointer;
+      transition: 0.25s all;
+      &:hover,
+      &:focus {
+        opacity: 0.8;
+      }
+    }
+    &_result {
+      font-size: 16px;
+      align-items: center;
+      display: flex;
+      height: 36px;
+      width: 100%;
+    }
+    &.is-disabled {
+      &_button {
+        opacity: 0.5;
+      }
+    }
   }
 }
 
