--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -107,7 +107,7 @@ $col3-width: auto;
     box-shadow: 0 0 1px 0 #c2c2c2;
     height: 300px;
     overflow-y: auto;
-    gap: 2px;
+    //gap: 2px;
     display: grid;
     border-radius: 0 0 $table-border-radius $table-border-radius;
 
@@ -123,6 +123,7 @@ $col3-width: auto;
     background: $tree-row-background;
     padding: 7px 10px;
     transition: 0.25s all;
+    margin-bottom: 2px;
 
     font-size: 12px;
     overflow: hidden;
