--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -317,6 +317,9 @@ $col3-width: auto;
     border-radius: 4px;
     background: white;
     overflow: hidden;
+    &.is-indeterminate:after {
+      transform: scale(0.7) scaleY(0.25);
+    }
     &:after {
       display: block;
       margin: 2px;;
