Added click tag and initialise value

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -250,6 +250,7 @@ $col3-width: auto;
       background: #e1ebf4;
       border-radius: 30px;
       display: flex;
+      cursor: pointer;
       height: -moz-max-content;
       height: max-content;
       justify-content: space-between;
